--- a/MDK-ARM/F446RET6/F446RET6.build_log.htm
+++ b/MDK-ARM/F446RET6/F446RET6.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.35.0.0
 Copyright (C) 2021 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Jeshwin Treasho, Suri Inno, LIC=EPPLD-8VVCS-35FTX-HKLG7-5FI8N-8GIAD
+License Information: jenifer surinova_2023@outlook.com, surinova, LIC=KIVNB-2PCA1-ZELH2-9UY01-E7BGS-P6RYS
  
 Tool Versions:
 Toolchain:       MDK-ARM Professional  Version: 5.35.0.2
@@ -21,50 +21,26 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
-S:\Embedded\G3\Main MCU\G3-Main_MCU\MDK-ARM\F446RET6.uvprojx
-Project File Date:  08/30/2024
+E:\PraveenKumar\G3-Main_Controller\MDK-ARM\F446RET6.uvprojx
+Project File Date:  10/10/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'F446RET6'
-assembling startup_stm32f446xx.s...
-compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_it.c...
-compiling stm32f4xx_hal_msp.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling EEPROM.c...
-compiling stm32f4xx_hal_gpio.c...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal_rcc.c...
-compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_hal_flash_ex.c...
-compiling stm32f4xx_hal_dma.c...
-compiling stm32f4xx_hal_pwr_ex.c...
-compiling stm32f4xx_hal_rcc_ex.c...
-compiling stm32f4xx_hal_can.c...
-compiling stm32f4xx_hal_cortex.c...
-compiling stm32f4xx_hal.c...
-compiling stm32f4xx_hal_exti.c...
-compiling stm32f4xx_hal_i2c_ex.c...
-compiling main.c...
-compiling system_stm32f4xx.c...
-compiling stm32f4xx_hal_tim_ex.c...
-compiling stm32f4xx_hal_spi.c...
-compiling stm32f4xx_hal_uart.c...
-compiling stm32f4xx_hal_tim.c...
-compiling stm32f4xx_hal_i2c.c...
+Build target 'F446RET6'
 linking...
-Program Size: Code=30612 RO-data=908 RW-data=92 ZI-data=3084  
-FromELF: creating hex file...
-"F446RET6\F446RET6.axf" - 0 Error(s), 0 Warning(s).
+F446RET6\F446RET6.axf: Error: L6218E: Undefined symbol hi2c1 (referred from stm32f4xx_it.o).
+Not enough information to list image symbols.
+Not enough information to list load addresses in the image map.
+Finished: 2 information, 0 warning and 1 error messages.
+"F446RET6\F446RET6.axf" - 1 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
 Package Vendor: ARM
-                http://www.keil.com/pack/ARM.CMSIS.5.9.0.pack
-                ARM.CMSIS.5.9.0
+                https://www.keil.com/pack/ARM.CMSIS.6.0.0.pack
+                ARM.CMSIS.6.0.0
                 CMSIS (Common Microcontroller Software Interface Standard)
-   * Component: CORE Version: 5.6.0
+   * Component: CORE Version: 6.0.0
 
 Package Vendor: Keil
                 https://www.keil.com/pack/Keil.STM32F4xx_DFP.2.17.0.pack
@@ -73,13 +49,14 @@ Package Vendor: Keil
 
 <h2>Collection of Component include folders:</h2>
   .\RTE\_F446RET6
-  C:\Users\Dell\AppData\Local\Arm\Packs\ARM\CMSIS\5.9.0\CMSIS\Core\Include
-  C:\Users\Dell\AppData\Local\Arm\Packs\Keil\STM32F4xx_DFP\2.17.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
+  C:\Users\surin\AppData\Local\Arm\Packs\ARM\CMSIS\6.0.0\CMSIS\Core\Include
+  C:\Users\surin\AppData\Local\Arm\Packs\Keil\STM32F4xx_DFP\2.17.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
 
 <h2>Collection of Component Files used:</h2>
 
-   * Component: ARM::CMSIS:CORE:5.6.0
+   * Component: ARM::CMSIS:CORE:6.0.0
       Include file:  CMSIS\Core\Include\tz_context.h
+Target not created.
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
