--- a/MDK-ARM/F446RET6/F446RET6.build_log.htm
+++ b/MDK-ARM/F446RET6/F446RET6.build_log.htm
@@ -26,13 +26,44 @@ Project File Date:  10/10/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'F446RET6'
+Rebuild target 'F446RET6'
+compiling stm32f4xx_hal_flash.c...
+assembling startup_stm32f446xx.s...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_it.c...
+compiling EEPROM.c...
+compiling stm32f4xx_hal_msp.c...
+compiling stm32f4xx_hal_rcc.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_can.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_rcc_ex.c...
+../Core/Src/main.c(1185): warning: 'memcpy' will always overflow; destination buffer has size 1, but size argument is 4 [-Wfortify-source]
+                memcpy(&RFS1, &Read_Value[4],4 );                                       
+                ^
+../Core/Src/main.c(1186): warning: 'memcpy' will always overflow; destination buffer has size 1, but size argument is 4 [-Wfortify-source]
+        memcpy(&RRS1, &Read_Value[8],4 );
+        ^
+2 warnings generated.
+compiling main.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal_cortex.c...
+compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal_i2c_ex.c...
+compiling stm32f4xx_hal_exti.c...
+compiling system_stm32f4xx.c...
+compiling stm32f4xx_hal_tim_ex.c...
+compiling stm32f4xx_hal_spi.c...
+compiling stm32f4xx_hal_uart.c...
+compiling stm32f4xx_hal_tim.c...
+compiling stm32f4xx_hal_i2c.c...
 linking...
-F446RET6\F446RET6.axf: Error: L6218E: Undefined symbol hi2c1 (referred from stm32f4xx_it.o).
-Not enough information to list image symbols.
-Not enough information to list load addresses in the image map.
-Finished: 2 information, 0 warning and 1 error messages.
-"F446RET6\F446RET6.axf" - 1 Error(s), 0 Warning(s).
+Program Size: Code=25548 RO-data=908 RW-data=24 ZI-data=2736  
+FromELF: creating hex file...
+"F446RET6\F446RET6.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -56,8 +87,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:6.0.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Target not created.
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
