--- a/MDK-ARM/F446RET6/F446RET6.build_log.htm
+++ b/MDK-ARM/F446RET6/F446RET6.build_log.htm
@@ -26,33 +26,8 @@ Project File Date:  10/11/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'F446RET6'
-assembling startup_stm32f446xx.s...
-compiling stm32f4xx_it.c...
-compiling stm32f4xx_hal_msp.c...
-compiling EEPROM.c...
-compiling stm32f4xx_hal_rcc.c...
-compiling stm32f4xx_hal_can.c...
+Build target 'F446RET6'
 compiling main.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling stm32f4xx_hal_flash_ex.c...
-compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_rcc_ex.c...
-compiling stm32f4xx_hal_gpio.c...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal_dma.c...
-compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_hal_exti.c...
-compiling stm32f4xx_hal_pwr_ex.c...
-compiling stm32f4xx_hal.c...
-compiling stm32f4xx_hal_cortex.c...
-compiling stm32f4xx_hal_i2c_ex.c...
-compiling system_stm32f4xx.c...
-compiling stm32f4xx_hal_tim_ex.c...
-compiling stm32f4xx_hal_i2c.c...
-compiling stm32f4xx_hal_spi.c...
-compiling stm32f4xx_hal_uart.c...
-compiling stm32f4xx_hal_tim.c...
 linking...
 Program Size: Code=32324 RO-data=908 RW-data=92 ZI-data=3092  
 FromELF: creating hex file...
