--- a/MDK-ARM/F446RET6/F446RET6.build_log.htm
+++ b/MDK-ARM/F446RET6/F446RET6.build_log.htm
@@ -26,7 +26,36 @@ Project File Date:  10/18/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'F446RET6'
+Rebuild target 'F446RET6'
+assembling startup_stm32f446xx.s...
+compiling stm32f4xx_it.c...
+compiling stm32f4xx_hal_msp.c...
+compiling EEPROM.c...
+compiling main.c...
+compiling stm32f4xx_hal_rcc.c...
+compiling stm32f4xx_hal_can.c...
+compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_rcc_ex.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling stm32f4xx_hal_cortex.c...
+compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_exti.c...
+compiling stm32f4xx_hal_i2c_ex.c...
+compiling stm32f4xx_hal_spi.c...
+compiling stm32f4xx_hal_tim.c...
+compiling stm32f4xx_hal_tim_ex.c...
+compiling stm32f4xx_hal_i2c.c...
+compiling system_stm32f4xx.c...
+compiling stm32f4xx_hal_uart.c...
+linking...
+Program Size: Code=22502 RO-data=518 RW-data=116 ZI-data=3012  
+FromELF: creating hex file...
 "F446RET6\F446RET6.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -51,7 +80,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:12
 </pre>
 </body>
 </html>
